# QR-Code-Generator

./: Cargo.toml  LICENSE.md  README.md
src/: app.rs  main.rs  ui.rs
